[bug fix] DR-1935: Channel pack flags to be displayed on mobile?

--- a/src/main/webapp/src/scss/main/components/channel-pack-combos.scss
+++ b/src/main/webapp/src/scss/main/components/channel-pack-combos.scss
@@ -9,7 +9,7 @@
   margin-bottom: 30px;
 
   @include breakpoint(mobileOnly) {
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     width: 100%;
   }
 
